topic5/python_5-5
Python 3.7.4 (tags/v3.7.4:e09359112e, Jul  8 2019, 19:29:22) [MSC v.1916 32 bit (Intel)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> from math import factorial as f
>>> f(5)
120
>>>
>>>
>>> def b(n,k):
...     return (f(n)/(f(k)*f(n-k)))
...
>>> b(4,2)
6.0
>>> b(51,4)
249900.0
>>> b(51,4) / b(52,5)
0.09615384615384616
>>> b(51,4) / b(52,5)
0.09615384615384616
>>> 1 - (b(48,5) / b(52,5))
0.34115800166220334
>>> 1 - (b(39,5) / b(52,5))
0.7784663865546219
>>> b(11,4)*b(16,4)
600600.0
>>> b(11,1)*b(16,1) / b(52,2)
0.13273001508295626
>>> b(4,1)*b(16,1) / b(52,2)
0.048265460030165915
>>> b(11,2)
55.0
>>> b(11,2) / b(52,2)
0.04147812971342383
>>> 1- b(23,1) / b(50,1)
0.54
>>> (4*3)**2 / b(52,2)
0.1085972850678733
>>> (4*3) / b(52,2)
0.00904977375565611
>>> (4*2**3) / b(52,2)
0.024132730015082957
>>> (4**2*3) / b(52,2)
0.03619909502262444
>>> (4**2*3)+b(4,2) / b(52,2)
48.00452488687783
>>> ((4**2*3)+b(4,2)) / b(52,2)
0.04072398190045249
>>> b(13,1)
13.0
>>> b(13,1)**3
2197.0
>>> b(13,1)**3 * b((52-3),2)
2583672.0
>>> one = b(13,1)**3 * b((52-3),2)
>>> two = b(52,5)
>>> one/two
0.9941176470588236
>>> one = b(13,1)*b(12,1)*b(4,3)*4*4
>>> one
9984.0
>>> one / two
0.0038415366146458585
>>> b(12,2)
66.0
>>> 12*11
132
>>> b(11,1)
11.0
>>> one = b(13,1)*b(12,1)*36
>>> two = b(52,2)
>>> one/two
4.235294117647059
>>> one
5616.0
>>> two
1326.0
>>> one = b(13,1)*b(12,1)*b(4,2)*b(4,2)
>>> one
5616.0
>>> b(52,2)
1326.0
>>> b(52,5)
2598960.0
>>> two = b(52,5)
>>> one = b(13,1)*b(12,1)*b(4,2)*b(4,2)*b(11,1)*b(4,1)
>>> one/two
0.095078031212485
>>> one = b(13,1)*b(4,2) * b(12,1)*b(3,1) * b(11,1)*b(2,1) * b(10,1)*b(1,1)
>>> one
617760.0
>>> one/two
0.23769507803121248
>>> one = b(13,1)*b(4,3)*b(12,1)*(4,2)*b(11,1)*b(4,2)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: can't multiply sequence by non-int of type 'float'
>>> one = b(13,1)*b(4,3)*b(12,1)*b(4,2)*b(11,1)*b(4,2)
>>> one/two
0.095078031212485
>>> one = b(13,1)*b(4,3)*b(12,1)*b(4,1)*b(11,1)*b(4,1)
>>> one/two
0.04225690276110444
>>> one = b(13,1)*b(4,3)*b(12,2)*b(4,1)*b(4,1)
>>> one/two
0.02112845138055222
>>> one = b(13,1)*b(4,2)*b(12,1)*b(4,2) * b(11,1) * b(4,1)
>>> one/two
0.095078031212485
>>> one = b(13,1)*b(4,2)*b(12,1)*b(4,1)*b(11,1)*b(4,1)*b(10,1)*b(4,1)
>>>
>>> one/two
2.5354141656662663
>>> one = b(13,1)*b(4,2)*b(12,1)*b(4,1)*b(11,1)*b(4,1)*b(10,1)*b(4,1)
>>> one
6589440.0
>>> one = b(13,1)*b(4,2)*b(12,3)*b(4,3)
>>> one/two
0.026410564225690276
>>> one = b(13,1)*b(4,2)*b(12,1)*b(4,2)*b(11,1)*b(4,1)
>>> one/two
0.095078031212485
>>> (5/6)**3
0.5787037037037038
>>> 1- (5/6)**3
0.42129629629629617
>>> (5/6)*(4/6)
0.5555555555555556
>>> ((5/6)*(4/6))**3
0.1714677640603567
>>> ((5/6)*(4/6))*3
1.6666666666666667
>>> b(6,3)
20.0
>>> b(6,3) / 6**3
0.09259259259259259
>>> 5/54
0.09259259259259259
>>> b(6,3)
20.0
>>> b(6,3) / 6**3
0.09259259259259259
>>> b(10,5)
252.0
>>> b(10,7)
120.0
>>> b(10,7) / b(10,5)
0.47619047619047616
>>> b(7,5) / b(10,5)
0.08333333333333333
>>> 1 - b(4,4) / b(10,5)
0.996031746031746
>>> (b(5,4)*b(5,5)) / b(10,5)
0.01984126984126984
>>> (b(7,4)* b(7,5)) / b(10,5)
2.9166666666666665
>>> (b(7,4) + b(7,5)) / b(10,5)
0.2222222222222222
>>> (b(7,4)*b(3,1)) + b(7,5)) / b(10,5)
  File "<stdin>", line 1
    (b(7,4)*b(3,1)) + b(7,5)) / b(10,5)
                            ^
SyntaxError: invalid syntax
>>> (b(7,4)*b(3,1) + b(7,5)) / b(10,5)
0.5
>>> b(52,4) * (4/13)
83300.0
>>> a = b(52,4) * (4/13)
>>> a / b(52,4)
0.3076923076923077
>>> a = b(52,4) * (1/13)**4
>>> a / b(52,4)
3.501277966457758e-05
>>> 1 - b(10,6) / b(10,5)
0.16666666666666663
>>> 1 - b(10,6) / b(10,10)
-209.0
>>> 1 - b(7,6) / b(10,5)
0.9722222222222222
>>> b(7,4) * b(3,1) + b(7,5)
126.0
>>> b(7,4) * b(3,1) + b(7,5) / b(10,5)
105.08333333333333
>>> (b(7,4) * b(3,1) + b(7,5)) / b(10,5)
0.5
>>>
>>>
>>>
>>> 0.1051